master. added time config